(ui/Sidebar) fix text overflow issues

--- a/packages/app/src/ui/Sidebar/index.scss
+++ b/packages/app/src/ui/Sidebar/index.scss
@@ -13,7 +13,7 @@
 	&.sidebar-active {
 		transform: translateX(0);
 
-		@media screen and (max-width: 800px) {
+		@media screen and (max-width: 875px) {
 			background-color: var(--bg-quaternary) !important;
 		}
 	}
