--- a/packages/app/src/ui/Workspace/index.scss
+++ b/packages/app/src/ui/Workspace/index.scss
@@ -10,7 +10,7 @@
 	&.sidebar-active {
 		margin-left: 350px;
 
-		@media screen and (max-width: 800px) {
+		@media screen and (max-width: 875px) {
 			width: 100vw;
 			margin-left: 0;
 		}
